fixes unknow route backend/prices

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -312,7 +312,7 @@ consult_journal_entries:
 # Consult the prices
 consult_prices:
 - "backend/dashboards#sales"
-- "backend/prices#index" #?
+- "backend/product_nature_prices#index" #?
 
 # Consult the products
 consult_products:
@@ -587,7 +587,7 @@ manage_entity_links:
 # Create and update estimates
 manage_estimates:
 - "backend/dashboards#sales"
-- "backend/prices#find" #?
+- "backend/product_nature_prices#find" #?
 - "backend/sale_items#create"
 - "backend/sale_items#destroy"
 - "backend/sale_items#detail"
@@ -849,14 +849,14 @@ manage_outgoing_payments:
 # Manage prices
 manage_prices:
 - "backend/dashboards#sales"
-- "backend/prices#create" #?
-- "backend/prices#destroy" #?
-- "backend/prices#edit" #?
-- "backend/prices#export" #?
-- "backend/prices#import" #?
-- "backend/prices#list" #?
-- "backend/prices#new" #?
-- "backend/prices#update" #?
+- "backend/product_nature_prices#create" #?
+- "backend/product_nature_prices#destroy" #?
+- "backend/product_nature_prices#edit" #?
+- "backend/product_nature_prices#export" #?
+- "backend/product_nature_prices#import" #?
+- "backend/product_nature_prices#list" #?
+- "backend/product_nature_prices#new" #?
+- "backend/product_nature_prices#update" #?
 
 # Manage product categories
 manage_product_categories:
@@ -877,7 +877,7 @@ manage_products:
 - "backend/product_natures#destroy"
 - "backend/product_natures#edit"
 - "backend/product_natures#list"
-- "backend/product_natures#list_prices" #?
+- "backend/product_natures#list_product_nature_prices" #?
 - "backend/product_natures#new"
 - "backend/product_natures#update"
 
