--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -87,6 +87,7 @@
 #
 sales_001:
   address_id: 3
+  affair_id: 1
   amount: 123
   pretax_amount: 123
   client_id: 1
@@ -110,6 +111,7 @@ sales_001:
 
 sales_002:
   address_id: 3
+  affair_id: 2
   amount: 0
   pretax_amount: 0
   client_id: 1
@@ -132,6 +134,7 @@ sales_002:
 
 sales_003:
   address_id: 3
+  affair_id: 3
   amount: 10
   pretax_amount: 10
   client_id: 1
@@ -154,6 +157,7 @@ sales_003:
 
 sales_004:
   address_id: 3
+  affair_id: 4
   amount: 10
   client_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
@@ -174,6 +178,7 @@ sales_004:
 
 sales_005:
   address_id: 3
+  affair_id: 5
   amount: 123
   pretax_amount: 123
   client_id: 1
