Ignores Compass sprites

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ installer/releases
 installer/*.log
 
 public/system/*
+
+# Ignore compass sprites
+app/themes/tekyla/images/common-s*.png
+app/themes/tekyla/images/icons-s*.png
