Fixes 50 bugs due to schema changes

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -18,8 +18,8 @@
 # - "backend/cells/placeholder_cells#show"
 # - "backend/cells/product_bar_cells#show"
 # - "backend/cells/product_pie_cells#show"
-# - "backend/dashboards#list_my_future_entity_events"
-# - "backend/dashboards#list_recent_entity_events"
+# - "backend/dashboards#list_my_future_events"
+# - "backend/dashboards#list_recent_events"
 # - "backend/dashboards#settings_accountancy"
 # - "backend/dashboards#settings_base"
 # - "backend/dashboards#settings_production"
@@ -29,7 +29,6 @@
 # - "backend/dashboards#settings_sales"
 # - "backend/dashboards#settings_stocks"
 # - "backend/entity_addresses#unroll"
-# - "backend/entity_categories#list_product_nature_prices"
 # - "backend/entity_natures#unroll"
 # - "backend/interfacers#autocomplete"
 # - "backend/interfacers#product_trackings"
@@ -545,7 +544,7 @@ manage_entity_categories:
 - "backend/entity_categories#edit"
 - "backend/entity_categories#index"
 - "backend/entity_categories#list"
-- "backend/entity_categories#list_prices" #?
+- "backend/entity_categories#list_prices"
 - "backend/entity_categories#new"
 - "backend/entity_categories#show"
 - "backend/entity_categories#update"
@@ -1052,7 +1051,7 @@ manage_warehouses:
 - "backend/warehouses#edit"
 - "backend/warehouses#index"
 - "backend/warehouses#list"
-- "backend/warehouses#list_product_moves"
+- "backend/warehouses#list_product_moves" #?
 - "backend/warehouses#new"
 - "backend/warehouses#show"
 - "backend/warehouses#update"
