--- a/test/fixtures/entity_categories.yml
+++ b/test/fixtures/entity_categories.yml
@@ -53,4 +53,14 @@ entity_categories_001:
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
 
+entity_categories_002:
+  id: 2
+  name: Default to delete
+  code: DEFTODEL
+  by_default: false
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2006-07-19 19:13:59 +02:00
+  updater_id: 1
+
 
