--- a/test/fixtures/affairs.yml
+++ b/test/fixtures/affairs.yml
@@ -61,13 +61,46 @@ affairs_001:
   updater_id: 1
 
 affairs_002:
+  closed: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  credit: 411.23
+  currency: "EUR"
+  debit: 411.23
+  id: 2
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+affairs_003:
   closed: false
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  credit: 0
+  credit: 236
   currency: "EUR"
   debit: 158
-  id: 2
+  id: 3
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+affairs_004:
+  closed: false
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  credit: 1236
+  currency: "EUR"
+  debit: 158
+  id: 4
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+affairs_005:
+  closed: false
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  credit: 236
+  currency: "EUR"
+  debit: 1158
+  id: 5
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
