--- a/test/fixtures/incoming_payments.yml
+++ b/test/fixtures/incoming_payments.yml
@@ -68,6 +68,7 @@
 #   updater_id: 1
 #
 incoming_payments_001:
+  affair_id: 1
   amount: 123
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -83,6 +84,7 @@ incoming_payments_001:
   updater_id: 1
 
 incoming_payments_002:
+  affair_id: 2
   amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -98,6 +100,7 @@ incoming_payments_002:
   updater_id: 1
 
 incoming_payments_003:
+  affair_id: 3
   amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
