--- a/test/fixtures/operations.yml
+++ b/test/fixtures/operations.yml
@@ -63,11 +63,23 @@ operations_001:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-operations_003:
+operations_002:
   confirmed: true
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
+  nature: "produce"
+  started_at: 2009-07-19 19:13:59 +02:00
+  stopped_at: 2009-07-19 19:13:59 +02:00
+  target_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+operations_003:
+  confirmed: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
   nature: "produce"
   started_at: 2009-07-19 19:13:59 +02:00
   stopped_at: 2009-07-19 19:13:59 +02:00
