--- a/test/fixtures/outgoing_payments.yml
+++ b/test/fixtures/outgoing_payments.yml
@@ -63,6 +63,7 @@
 #   updater_id: 1
 #
 outgoing_payments_001:
+  affair_id: 1
   amount: 116
   cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
@@ -78,6 +79,7 @@ outgoing_payments_001:
   updater_id: 1
 
 outgoing_payments_002:
+  affair_id: 2
   amount: 156
   cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
