--- a/test/fixtures/purchases.yml
+++ b/test/fixtures/purchases.yml
@@ -60,8 +60,8 @@
 #   updater_id: 1
 #
 purchases_001:
+  affair_id: 1
   amount: 0
-
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -76,6 +76,7 @@ purchases_001:
   updater_id: 1
 
 purchases_002:
+  affair_id: 2
   amount: 0
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
@@ -90,6 +91,7 @@ purchases_002:
   updater_id: 1
 
 purchases_003:
+  affair_id: 3
   amount: 0
   pretax_amount: 0
   nature_id: 1
@@ -104,6 +106,7 @@ purchases_003:
   updater_id: 1
 
 purchases_004:
+  affair_id: 4
   amount: 0
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
@@ -119,6 +122,7 @@ purchases_004:
   updater_id: 1
 
 purchases_005:
+  affair_id: 5
   amount: 0
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
