Adds shapefile import for rake db:demo

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -7,6 +7,7 @@
 # - "backend/animals#list"
 # - "backend/animals#list_children"
 # - "backend/animals#new"
+# - "backend/animals#picture"
 # - "backend/animals#show"
 # - "backend/animals#update"
 # - "backend/cells/demo_bar_cells#show"
@@ -28,6 +29,7 @@
 # - "backend/dashboards#settings_relationship"
 # - "backend/dashboards#settings_sales"
 # - "backend/dashboards#settings_stocks"
+# - "backend/entities#picture"
 # - "backend/entity_addresses#unroll"
 # - "backend/entity_natures#unroll"
 # - "backend/interfacers#autocomplete"
@@ -108,6 +110,7 @@
 # - "backend/product_memberships#show"
 # - "backend/product_memberships#update"
 # - "backend/product_nature_categories#list_product_natures"
+# - "backend/product_natures#list_prices"
 # - "backend/product_natures#show"
 # - "backend/product_process_phases#create"
 # - "backend/product_process_phases#destroy"
@@ -171,6 +174,7 @@
 # - "backend/products#destroy"
 # - "backend/products#edit"
 # - "backend/products#new"
+# - "backend/products#show"
 # - "backend/products#update"
 # - "backend/professions#create"
 # - "backend/professions#destroy"
@@ -859,7 +863,7 @@ manage_products:
 - "backend/product_natures#destroy"
 - "backend/product_natures#edit"
 - "backend/product_natures#list"
-- "backend/product_natures#list_product_nature_prices"
+- "backend/product_natures#list_product_nature_prices" #?
 - "backend/product_natures#new"
 - "backend/product_natures#update"
 
