--- a/config/rights.yml
+++ b/config/rights.yml
@@ -6,6 +6,8 @@
 # - "backend/animals#index"
 # - "backend/animals#list"
 # - "backend/animals#list_children"
+# - "backend/animals#list_group"
+# - "backend/animals#list_place"
 # - "backend/animals#new"
 # - "backend/animals#picture"
 # - "backend/animals#show"
