add CRUD localizations for products

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -104,6 +104,14 @@
 # - "backend/product_indicators#new"
 # - "backend/product_indicators#show"
 # - "backend/product_indicators#update"
+# - "backend/product_localizations#create"
+# - "backend/product_localizations#destroy"
+# - "backend/product_localizations#edit"
+# - "backend/product_localizations#index"
+# - "backend/product_localizations#list"
+# - "backend/product_localizations#new"
+# - "backend/product_localizations#show"
+# - "backend/product_localizations#update"
 # - "backend/product_memberships#create"
 # - "backend/product_memberships#destroy"
 # - "backend/product_memberships#edit"
