Re-adds main missing form components

--- a/test/fixtures/custom_fields.yml
+++ b/test/fixtures/custom_fields.yml
@@ -28,7 +28,7 @@
 #  lock_version    :integer          default(0), not null
 #  maximal_length  :integer
 #  maximal_value   :decimal(19, 4)
-#  minimal_length  :integer          default(0), not null
+#  minimal_length  :integer
 #  minimal_value   :decimal(19, 4)
 #  name            :string(255)      not null
 #  nature          :string(8)        not null
@@ -46,7 +46,6 @@
 #   creator_id: 1
 #   customized_type: "Lorem ipsum"
 #   id: 1
-#   minimal_length: 0
 #   name: "Lorem ipsum"
 #   nature: "Lorem ipsum"
 #   required: true
