--- a/test/fixtures/product_memberships.yml
+++ b/test/fixtures/product_memberships.yml
@@ -27,7 +27,7 @@
 #  lock_version :integer          default(0), not null
 #  product_id   :integer          not null
 #  started_at   :datetime         not null
-#  stopped_at   :datetime
+#  stopped_at   :datetime         not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer
 #
@@ -41,6 +41,7 @@
 #   id: 1
 #   product_id: 1
 #   started_at: 2009-07-19 19:13:59 +02:00
+#   stopped_at: 2009-07-19 19:13:59 +02:00
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
