--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -204,7 +204,7 @@ land_parcels_002:
   updater_id: 1
   variety_id: 1
 
-tools_001:
+equipments_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 8
@@ -213,12 +213,12 @@ tools_001:
   number: "0008"
   owner_id: 1
   unit_id: 1
-  type: 'Tool'
+  type: 'Equipment'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variety_id: 1
 
-tools_002:
+equipments_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 9
@@ -226,7 +226,7 @@ tools_002:
   nature_id: 1
   number: "0009"
   owner_id: 1
-  type: 'Tool'
+  type: 'Equipment'
   unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
