--- a/test/fixtures/listing_nodes.yml
+++ b/test/fixtures/listing_nodes.yml
@@ -67,7 +67,7 @@ listing_nodes_001:
   creator_id: 1
   exportable: true
   id: 1
-  label: "Lorem ipsum"
+  label: "Entities"
   listing_id: 1
   name: "entity"
   key: <%='k'+rand.to_s[2..-1]+'d'%>
@@ -78,13 +78,13 @@ listing_nodes_001:
 listing_nodes_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  parent_id: 3
+  parent_id: 1
   exportable: true
   id: 2
-  label: "Dest"
+  label: "First name"
   listing_id: 1
-  name: "contact_0.line_2"
-  attribute_name: "line_2"
+  name: "entity.first_name"
+  attribute_name: "first_name"
   sql_type: "string"
   nature: "column"
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -97,10 +97,10 @@ listing_nodes_003:
   exportable: true
   id: 3
   parent_id: 1
-  label: "Lorem ipsum"
+  label: "Addresses"
   listing_id: 1
-  name: "contact_0"
-  attribute_name: "contacts"
+  name: "address_0"
+  attribute_name: "addresses"
   nature: "has_many"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -112,10 +112,10 @@ listing_nodes_004:
   parent_id: 3
   exportable: true
   id: 4
-  label: "Lorem ipsum"
+  label: "Coordinate"
   listing_id: 1
-  name: "contact_0.address"
-  attribute_name: "address"
+  name: "address_0.coordinate"
+  attribute_name: "coordinate"
   sql_type: "string"
   nature: "column"
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -128,10 +128,10 @@ listing_nodes_005:
   parent_id: 3
   exportable: true
   id: 5
-  label: "E-mail"
+  label: "Canal"
   listing_id: 1
-  name: "contact_0.email"
-  attribute_name: "email"
+  name: "address_0.canal"
+  attribute_name: "canal"
   nature: "column"
   sql_type: "string"
   updated_at: 2009-07-19 19:13:59 +02:00
