--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -209,7 +209,7 @@ equipments_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 8
-  name: "Trator"
+  name: "Tractor"
   nature_id: 1
   number: "0008"
   owner_id: 1
@@ -241,8 +241,8 @@ animals_001:
   nature_id: 1
   number: "0010"
   owner_id: 1
-  type: 'Animal'
   unit_id: 1
+  type: 'Animal'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variety_id: 1
