add Matter in production (CRUD )

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -54,6 +54,17 @@
 # - "backend/logs#new"
 # - "backend/logs#show"
 # - "backend/logs#update"
+# - "backend/matters#create"
+# - "backend/matters#destroy"
+# - "backend/matters#edit"
+# - "backend/matters#index"
+# - "backend/matters#list"
+# - "backend/matters#list_group"
+# - "backend/matters#list_place"
+# - "backend/matters#new"
+# - "backend/matters#picture"
+# - "backend/matters#show"
+# - "backend/matters#update"
 # - "backend/operation_natures#create"
 # - "backend/operation_natures#destroy"
 # - "backend/operation_natures#edit"
