add campaign and activity MVC & CRUD

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -1,5 +1,13 @@
 # Unused actions in rights
 # - "authentication/sessions#renew"
+# - "backend/activities#create"
+# - "backend/activities#destroy"
+# - "backend/activities#edit"
+# - "backend/activities#index"
+# - "backend/activities#list"
+# - "backend/activities#new"
+# - "backend/activities#show"
+# - "backend/activities#update"
 # - "backend/animals#create"
 # - "backend/animals#destroy"
 # - "backend/animals#edit"
@@ -12,6 +20,14 @@
 # - "backend/animals#picture"
 # - "backend/animals#show"
 # - "backend/animals#update"
+# - "backend/campaigns#create"
+# - "backend/campaigns#destroy"
+# - "backend/campaigns#edit"
+# - "backend/campaigns#index"
+# - "backend/campaigns#list"
+# - "backend/campaigns#new"
+# - "backend/campaigns#show"
+# - "backend/campaigns#update"
 # - "backend/cells/demo_bar_cells#show"
 # - "backend/cells/demo_pie_cells#show"
 # - "backend/cells/elevage_rss_cells#show"
