--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -53,13 +53,26 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
-
-# # Empty samples of activities
-# activities_001:
-#   id: 1
-#   name: 'Activity 1'
-
-# activities_002:
-#   id: 2
-#   name: 'Activity 2'
+activities_001:
+  analytical_center_type: "main"
+  closed: false
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  family: "vegetal"
+  id: 1
+  name: "BLE"
+  net_margin: false
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  
+activities_002:
+  analytical_center_type: "main"
+  closed: false
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  family: "animal"
+  id: 2
+  name: "VL"
+  net_margin: false
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
