--- a/test/fixtures/campaigns.yml
+++ b/test/fixtures/campaigns.yml
@@ -43,13 +43,20 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+campaigns_001:
+  closed: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "2012"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
 
-
-# # Empty samples of campaigns
-# campaigns_001:
-#   id: 1
-#   name: 'Campaign 1'
-
-# campaigns_002:
-#   id: 2
-#   name: 'Campaign 2'
+campaigns_002:
+  closed: false
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  name: "2013"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
