--- a/test/fixtures/working_sets.yml
+++ b/test/fixtures/working_sets.yml
@@ -46,8 +46,16 @@ working_sets_001:
   id: 1
   name: 'Fertilisation minérale'
   nomen: 'mineral-fertilization'
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
 
 working_sets_002:
   id: 2
   name: 'Fertilisation organique'
   nomen: 'organic-fertilization'
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
