--- a/test/fixtures/procedure_natures.yml
+++ b/test/fixtures/procedure_natures.yml
@@ -44,13 +44,10 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
-
-# # Empty samples of procedure_natures
-# procedure_natures_001:
-#   id: 1
-#   name: 'ProcedureNature 1'
-
-# procedure_natures_002:
-#   id: 2
-#   name: 'ProcedureNature 2'
+procedure_natures_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "IT_BLE_REF"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
