--- a/test/fixtures/procedures.yml
+++ b/test/fixtures/procedures.yml
@@ -44,13 +44,11 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
-
-# # Empty samples of procedures
-# procedures_001:
-#   id: 1
-#   name: 'Procedure 1'
-
-# procedures_002:
-#   id: 2
-#   name: 'Procedure 2'
+procedures_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "IT_BLE"
+  nature_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
