--- a/test/fixtures/product_abilities.yml
+++ b/test/fixtures/product_abilities.yml
@@ -42,13 +42,11 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
-
-# # Empty samples of product_abilities
-# product_abilities_001:
-#   id: 1
-#   name: 'ProductAbility 1'
-
-# product_abilities_002:
-#   id: 2
-#   name: 'ProductAbility 2'
+product_abilities_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "SEMER"
+  product_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
