--- a/test/fixtures/product_memberships.yml
+++ b/test/fixtures/product_memberships.yml
@@ -45,3 +45,12 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+product_memberships_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  group_id: 2
+  id: 1
+  member_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
