MVC and CRUD on analytic_repartition

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -8,6 +8,14 @@
 # - "backend/activities#new"
 # - "backend/activities#show"
 # - "backend/activities#update"
+# - "backend/analytic_repartitions#create"
+# - "backend/analytic_repartitions#destroy"
+# - "backend/analytic_repartitions#edit"
+# - "backend/analytic_repartitions#index"
+# - "backend/analytic_repartitions#list"
+# - "backend/analytic_repartitions#new"
+# - "backend/analytic_repartitions#show"
+# - "backend/analytic_repartitions#update"
 # - "backend/animals#create"
 # - "backend/animals#destroy"
 # - "backend/animals#edit"
