--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -20,59 +20,53 @@
 #
 # == Table: activities
 #
-#  analytical_center_type    :string(255)      not null
-#  area_unit_id              :integer
-#  closed                    :boolean          not null
-#  created_at                :datetime         not null
-#  creator_id                :integer
-#  description               :string(255)
-#  family                    :string(255)      not null
-#  favored_product_nature_id :integer
-#  id                        :integer          not null, primary key
-#  lock_version              :integer          default(0), not null
-#  name                      :string(255)      not null
-#  net_margin                :boolean          not null
-#  nomen                     :string(255)
-#  parent_id                 :integer
-#  updated_at                :datetime         not null
-#  updater_id                :integer
-#  work_unit_id              :integer
+#  created_at   :datetime         not null
+#  creator_id   :integer
+#  depth        :integer
+#  description  :string(255)
+#  family       :string(255)      not null
+#  id           :integer          not null, primary key
+#  lft          :integer
+#  lock_version :integer          default(0), not null
+#  name         :string(255)      not null
+#  nature       :string(255)      not null
+#  nomen        :string(255)
+#  parent_id    :integer
+#  rgt          :integer
+#  started_at   :datetime
+#  stopped_at   :datetime
+#  updated_at   :datetime         not null
+#  updater_id   :integer
 #
 #
 # == Fixture: activities
 #
 # activities_001:
-#   analytical_center_type: "Lorem ipsum"
-#   closed: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   family: "Lorem ipsum"
 #   id: 1
 #   name: "Lorem ipsum"
-#   net_margin: true
+#   nature: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 activities_001:
-  analytical_center_type: "main"
-  closed: false
+  nature: "main"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   family: "vegetal"
   id: 1
   name: "BLE"
-  net_margin: false
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
 activities_002:
-  analytical_center_type: "main"
-  closed: false
+  nature: "main"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   family: "animal"
   id: 2
   name: "VL"
-  net_margin: false
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
