--- a/test/fixtures/activity_watchings.yml
+++ b/test/fixtures/activity_watchings.yml
@@ -18,46 +18,39 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: campaigns
+# == Table: activity_watchings
 #
-#  closed       :boolean          not null
-#  closed_at    :datetime
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  description  :string(255)
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  nomen        :string(255)
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  activity_id       :integer          not null
+#  area_unit_id      :integer
+#  created_at        :datetime         not null
+#  creator_id        :integer
+#  id                :integer          not null, primary key
+#  lock_version      :integer          default(0), not null
+#  position          :integer
+#  product_nature_id :integer          not null
+#  updated_at        :datetime         not null
+#  updater_id        :integer
+#  work_unit_id      :integer
 #
 #
-# == Fixture: campaigns
+# == Fixture: activity_watchings
 #
-# campaigns_001:
-#   closed: true
+# activity_watchings_001:
+#   activity_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   name: "Lorem ipsum"
+#   product_nature_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-campaigns_001:
-  closed: true
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  id: 1
-  name: "2012"
-  updated_at: 2009-07-19 19:13:59 +02:00
-  updater_id: 1
 
-campaigns_002:
-  closed: false
-  created_at: 2009-07-19 19:13:59 +02:00
-  creator_id: 1
-  id: 2
-  name: "2013"
-  updated_at: 2009-07-19 19:13:59 +02:00
-  updater_id: 1
+
+# # Empty samples of activity_watchings
+# activity_watchings_001:
+#   id: 1
+#   name: 'ActivityWatching 1'
+
+# activity_watchings_002:
+#   id: 2
+#   name: 'ActivityWatching 2'
