--- a/config/rights.yml
+++ b/config/rights.yml
@@ -213,6 +213,14 @@
 # - "backend/product_memberships#update"
 # - "backend/product_nature_categories#list_product_natures"
 # - "backend/product_natures#show"
+# - "backend/product_prices#create"
+# - "backend/product_prices#destroy"
+# - "backend/product_prices#edit"
+# - "backend/product_prices#index"
+# - "backend/product_prices#list"
+# - "backend/product_prices#new"
+# - "backend/product_prices#show"
+# - "backend/product_prices#update"
 # - "backend/product_process_phases#create"
 # - "backend/product_process_phases#destroy"
 # - "backend/product_process_phases#edit"
