--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -26,7 +26,6 @@
 #  attorney_account_id       :integer
 #  authorized_payments_count :integer
 #  born_on                   :date
-#  category_id               :integer
 #  client                    :boolean          not null
 #  client_account_id         :integer
 #  code                      :string(64)
@@ -61,6 +60,7 @@
 #  reduction_percentage      :decimal(19, 4)
 #  reminder_submissive       :boolean          not null
 #  responsible_id            :integer
+#  sale_price_listing_id     :integer
 #  siren                     :string(9)
 #  soundex                   :string(4)
 #  supplier                  :boolean          not null
@@ -101,7 +101,7 @@
 
 entities_001:
   nature_id: 1
-  category_id: 1
+  sale_price_listing_id: 1
   language: fra
   currency: EUR
   client: false
@@ -118,7 +118,7 @@ entities_001:
 
 entities_002:
   nature_id: 1
-  category_id: 1
+  sale_price_listing_id: 1
   currency: EUR
   language: fra
   client: false
@@ -133,7 +133,7 @@ entities_002:
 
 entities_003:
   nature_id: 1
-  category_id: 1
+  sale_price_listing_id: 1
   currency: EUR
   language: fra
   client: true
@@ -149,7 +149,7 @@ entities_003:
 entities_004:
   active: true
   nature_id: 1
-  category_id: 1
+  sale_price_listing_id: 1
   currency: EUR
   language: fra
   client: true
