--- a/test/fixtures/product_price_templates.yml
+++ b/test/fixtures/product_price_templates.yml
@@ -18,16 +18,16 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: product_nature_prices
+# == Table: product_price_templates
 #
 #  active            :boolean          default(TRUE), not null
 #  amount            :decimal(19, 4)   not null
 #  by_default        :boolean          default(TRUE)
-#  category_id       :integer
 #  created_at        :datetime         not null
 #  creator_id        :integer
 #  currency          :string(3)
 #  id                :integer          not null, primary key
+#  listing_id        :integer
 #  lock_version      :integer          default(0), not null
 #  pretax_amount     :decimal(19, 4)   not null
 #  product_nature_id :integer          not null
@@ -39,9 +39,9 @@
 #  updater_id        :integer
 #
 #
-# == Fixture: product_nature_prices
+# == Fixture: product_price_templates
 #
-# product_nature_prices_001:
+# product_price_templates_001:
 #   active: true
 #   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
@@ -53,11 +53,11 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-product_nature_prices_001:
+product_price_templates_001:
   active: true
   amount: 119.60
   pretax_amount: 100.00
-  category_id: 1
+  listing_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
@@ -67,11 +67,11 @@ product_nature_prices_001:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-product_nature_prices_002:
+product_price_templates_002:
   active: true
   amount: 119.60
   pretax_amount: 100.00
-  category_id: 1
+  listing_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
@@ -81,11 +81,11 @@ product_nature_prices_002:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-product_nature_prices_003:
+product_price_templates_003:
   active: true
   amount: 11.96
   pretax_amount: 10
-  category_id: 1
+  listing_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
@@ -95,11 +95,11 @@ product_nature_prices_003:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-product_nature_prices_004:
+product_price_templates_004:
   active: true
   amount: 209.30
   pretax_amount: 175.0
-  category_id: 1
+  listing_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 4
