--- a/test/fixtures/product_prices.yml
+++ b/test/fixtures/product_prices.yml
@@ -20,20 +20,21 @@
 #
 # == Table: product_prices
 #
-#  amount                  :decimal(19, 4)   not null
-#  created_at              :datetime         not null
-#  creator_id              :integer
-#  currency                :string(255)      not null
-#  id                      :integer          not null, primary key
-#  lock_version            :integer          default(0), not null
-#  pretax_amount           :decimal(19, 4)   not null
-#  product_id              :integer          not null
-#  product_nature_price_id :integer
-#  started_at              :datetime
-#  supplier_id             :integer          not null
-#  tax_id                  :integer
-#  updated_at              :datetime         not null
-#  updater_id              :integer
+#  amount        :decimal(19, 4)   not null
+#  created_at    :datetime         not null
+#  creator_id    :integer
+#  currency      :string(255)      not null
+#  id            :integer          not null, primary key
+#  lock_version  :integer          default(0), not null
+#  pretax_amount :decimal(19, 4)   not null
+#  product_id    :integer          not null
+#  started_at    :datetime
+#  stopped_at    :datetime
+#  supplier_id   :integer          not null
+#  tax_id        :integer
+#  template_id   :integer          not null
+#  updated_at    :datetime         not null
+#  updater_id    :integer
 #
 #
 # == Fixture: product_prices
@@ -47,6 +48,7 @@
 #   pretax_amount: 0
 #   product_id: 1
 #   supplier_id: 1
+#   template_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
