--- a/test/fixtures/product_price_templates.yml
+++ b/test/fixtures/product_price_templates.yml
@@ -20,34 +20,36 @@
 #
 # == Table: product_price_templates
 #
-#  active            :boolean          default(TRUE), not null
-#  amount            :decimal(19, 4)   not null
-#  by_default        :boolean          default(TRUE)
-#  created_at        :datetime         not null
-#  creator_id        :integer
-#  currency          :string(3)
-#  id                :integer          not null, primary key
-#  listing_id        :integer
-#  lock_version      :integer          default(0), not null
-#  pretax_amount     :decimal(19, 4)   not null
-#  product_nature_id :integer          not null
-#  started_at        :datetime
-#  stopped_at        :datetime
-#  supplier_id       :integer
-#  tax_id            :integer          not null
-#  updated_at        :datetime         not null
-#  updater_id        :integer
+#  active                            :boolean          default(TRUE), not null
+#  amounts_scale                     :integer          default(2), not null
+#  assignment_amount                 :decimal(19, 4)
+#  assignment_pretax_amount          :decimal(19, 4)
+#  by_default                        :boolean          default(TRUE)
+#  created_at                        :datetime         not null
+#  creator_id                        :integer
+#  currency                          :string(3)
+#  id                                :integer          not null, primary key
+#  listing_id                        :integer
+#  lock_version                      :integer          default(0), not null
+#  pretax_amount_calculation_formula :text
+#  pretax_amount_generation          :string(32)
+#  product_nature_id                 :integer          not null
+#  started_at                        :datetime
+#  stopped_at                        :datetime
+#  supplier_id                       :integer
+#  tax_id                            :integer          not null
+#  updated_at                        :datetime         not null
+#  updater_id                        :integer
 #
 #
 # == Fixture: product_price_templates
 #
 # product_price_templates_001:
 #   active: true
-#   amount: 0
+#   amounts_scale: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   pretax_amount: 0
 #   product_nature_id: 1
 #   tax_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
@@ -55,8 +57,8 @@
 #
 product_price_templates_001:
   active: true
-  amount: 119.60
-  pretax_amount: 100.00
+  assignment_amount: 119.60
+  assignment_pretax_amount: 100.00
   listing_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -69,8 +71,8 @@ product_price_templates_001:
 
 product_price_templates_002:
   active: true
-  amount: 119.60
-  pretax_amount: 100.00
+  assignment_amount: 119.60
+  assignment_pretax_amount: 100.00
   listing_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -83,8 +85,8 @@ product_price_templates_002:
 
 product_price_templates_003:
   active: true
-  amount: 11.96
-  pretax_amount: 10
+  assignment_amount: 11.96
+  assignment_pretax_amount: 10
   listing_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -97,8 +99,8 @@ product_price_templates_003:
 
 product_price_templates_004:
   active: true
-  amount: 209.30
-  pretax_amount: 175.0
+  assignment_amount: 209.30
+  assignment_pretax_amount: 175.0
   listing_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
