--- a/test/fixtures/product_prices.yml
+++ b/test/fixtures/product_prices.yml
@@ -21,6 +21,7 @@
 # == Table: product_prices
 #
 #  amount        :decimal(19, 4)   not null
+#  computed_at   :datetime         not null
 #  created_at    :datetime         not null
 #  creator_id    :integer
 #  currency      :string(255)      not null
@@ -28,10 +29,8 @@
 #  lock_version  :integer          default(0), not null
 #  pretax_amount :decimal(19, 4)   not null
 #  product_id    :integer          not null
-#  started_at    :datetime
-#  stopped_at    :datetime
 #  supplier_id   :integer          not null
-#  tax_id        :integer
+#  tax_id        :integer          not null
 #  template_id   :integer          not null
 #  updated_at    :datetime         not null
 #  updater_id    :integer
@@ -41,6 +40,7 @@
 #
 # product_prices_001:
 #   amount: 0
+#   computed_at: 2009-07-19 19:13:59 +02:00
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   currency: "Lorem ipsum"
@@ -48,6 +48,7 @@
 #   pretax_amount: 0
 #   product_id: 1
 #   supplier_id: 1
+#   tax_id: 1
 #   template_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
