Renames ProductIndicator to fit CustomField logic

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -163,30 +163,31 @@
 # - "backend/product_groups#new"
 # - "backend/product_groups#show"
 # - "backend/product_groups#update"
-# - "backend/product_indicator_nature_choices#create"
-# - "backend/product_indicator_nature_choices#destroy"
-# - "backend/product_indicator_nature_choices#down"
-# - "backend/product_indicator_nature_choices#edit"
-# - "backend/product_indicator_nature_choices#new"
-# - "backend/product_indicator_nature_choices#up"
-# - "backend/product_indicator_nature_choices#update"
-# - "backend/product_indicator_natures#create"
-# - "backend/product_indicator_natures#destroy"
-# - "backend/product_indicator_natures#down"
-# - "backend/product_indicator_natures#edit"
-# - "backend/product_indicator_natures#index"
-# - "backend/product_indicator_natures#list"
-# - "backend/product_indicator_natures#list_choices"
-# - "backend/product_indicator_natures#new"
-# - "backend/product_indicator_natures#show"
-# - "backend/product_indicator_natures#up"
-# - "backend/product_indicator_natures#update"
+# - "backend/product_indicator_choices#create"
+# - "backend/product_indicator_choices#destroy"
+# - "backend/product_indicator_choices#down"
+# - "backend/product_indicator_choices#edit"
+# - "backend/product_indicator_choices#new"
+# - "backend/product_indicator_choices#up"
+# - "backend/product_indicator_choices#update"
+# - "backend/product_indicator_data#create"
+# - "backend/product_indicator_data#destroy"
+# - "backend/product_indicator_data#edit"
+# - "backend/product_indicator_data#index"
+# - "backend/product_indicator_data#new"
+# - "backend/product_indicator_data#show"
+# - "backend/product_indicator_data#update"
 # - "backend/product_indicators#create"
 # - "backend/product_indicators#destroy"
+# - "backend/product_indicators#down"
 # - "backend/product_indicators#edit"
 # - "backend/product_indicators#index"
+# - "backend/product_indicators#list"
+# - "backend/product_indicators#list_choices"
 # - "backend/product_indicators#new"
 # - "backend/product_indicators#show"
+# - "backend/product_indicators#sort"
+# - "backend/product_indicators#up"
 # - "backend/product_indicators#update"
 # - "backend/product_links#create"
 # - "backend/product_links#destroy"
