--- a/test/fixtures/product_indicator_choices.yml
+++ b/test/fixtures/product_indicator_choices.yml
@@ -18,22 +18,29 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: product_indicator_nature_choices
+# == Table: product_indicator_choices
 #
 #  created_at   :datetime         not null
 #  creator_id   :integer
-#  description  :string(255)
+#  description  :text
 #  id           :integer          not null, primary key
+#  indicator_id :integer          not null
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
-#  nature_id    :integer          not null
 #  position     :integer
 #  updated_at   :datetime         not null
 #  updater_id   :integer
 #  value        :string(255)
 #
-require 'test_helper'
-
-class ProductIndicatorNatureChoiceTest < ActiveSupport::TestCase
-
-end
+#
+# == Fixture: product_indicator_choices
+#
+# product_indicator_choices_001:
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   indicator_id: 1
+#   name: "Lorem ipsum"
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
