--- a/test/fixtures/product_indicator_data.yml
+++ b/test/fixtures/product_indicator_data.yml
@@ -18,29 +18,36 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: product_indicator_nature_choices
+# == Table: product_indicator_data
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  description  :string(255)
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  nature_id    :integer          not null
-#  position     :integer
-#  updated_at   :datetime         not null
-#  updater_id   :integer
-#  value        :string(255)
+#  boolean_value   :boolean          not null
+#  choice_value_id :integer
+#  created_at      :datetime         not null
+#  creator_id      :integer
+#  decimal_value   :decimal(19, 4)
+#  description     :text
+#  id              :integer          not null, primary key
+#  indicator_id    :integer          not null
+#  lock_version    :integer          default(0), not null
+#  measure_unit_id :integer
+#  measure_value   :decimal(19, 4)
+#  measured_at     :datetime         not null
+#  product_id      :integer          not null
+#  string_value    :text
+#  updated_at      :datetime         not null
+#  updater_id      :integer
 #
 #
-# == Fixture: product_indicator_nature_choices
+# == Fixture: product_indicator_data
 #
-# product_indicator_nature_choices_001:
+# product_indicator_data_001:
+#   boolean_value: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   name: "Lorem ipsum"
-#   nature_id: 1
+#   indicator_id: 1
+#   measured_at: 2009-07-19 19:13:59 +02:00
+#   product_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
