--- a/test/fixtures/product_indicators.yml
+++ b/test/fixtures/product_indicators.yml
@@ -20,34 +20,34 @@
 #
 # == Table: product_indicators
 #
-#  boolean_value   :boolean          not null
-#  choice_value_id :integer
-#  created_at      :datetime         not null
-#  creator_id      :integer
-#  decimal_value   :decimal(19, 4)
-#  description     :string(255)
-#  id              :integer          not null, primary key
-#  lock_version    :integer          default(0), not null
-#  measure_unit_id :integer
-#  measure_value   :decimal(19, 4)
-#  measured_at     :datetime         not null
-#  nature_id       :integer          not null
-#  product_id      :integer          not null
-#  string_value    :text
-#  updated_at      :datetime         not null
-#  updater_id      :integer
+#  active         :boolean          not null
+#  created_at     :datetime         not null
+#  creator_id     :integer
+#  description    :text
+#  id             :integer          not null, primary key
+#  lock_version   :integer          default(0), not null
+#  maximal_length :integer
+#  maximal_value  :decimal(19, 4)
+#  minimal_length :integer
+#  minimal_value  :decimal(19, 4)
+#  name           :string(255)      not null
+#  nature         :string(255)      not null
+#  process_id     :integer
+#  unit_id        :integer
+#  updated_at     :datetime         not null
+#  updater_id     :integer
+#  usage          :string(255)
 #
 #
 # == Fixture: product_indicators
 #
 # product_indicators_001:
-#   boolean_value: true
+#   active: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   measured_at: 2009-07-19 19:13:59 +02:00
-#   nature_id: 1
-#   product_id: 1
+#   name: "Lorem ipsum"
+#   nature: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
