--- a/test/fixtures/document_templates.yml
+++ b/test/fixtures/document_templates.yml
@@ -54,32 +54,29 @@
 
 document_templates_001:
   active: true
-  code: "document"
+  archiving: "document"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   by_default: true
   id: 1
-  language: '???'
-  name: "Lorem ipsum"
+  language: 'FRA'
+  name: "AN"
   nature: sales_invoice
-  family: management
   source: "<?xml version='1.0' encoding='utf-8'?><template><document></document></template>"
-  cache: "# Fake ruby"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
 document_templates_002:
   active: true
+  archiving: "document"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  by_default: false
-  nature: sales_invoice
-  family: management
+  by_default: true
   id: 2
-  language: '???'
-  name: "Lorem ipsum"
-  source: "<?xml version='1.0' encoding='utf-8'?>"
-  cache: "# Fake ruby"
+  language: 'FRA'
+  name: "FA"
+  nature: sales_invoice
+  source: "<?xml version='1.0' encoding='utf-8'?><template><document></document></template>"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
