--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -94,14 +94,14 @@ product_natures_001:
   active: true
   alive: true
   category_id: 1
-  commercial_name: "Lorem ipsum"
+  commercial_name: "Vache"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   deliverable: true
   depreciable: false
   id: 1
   indivisible: true
-  name: "Lorem ipsum 1"
+  name: "Bovin"
   number: "LI1"
   producible: true
   purchasable: true
