Add MVC on LandParcel and Animal Groups

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -24,6 +24,14 @@
 # - "backend/activity_watchings#new"
 # - "backend/activity_watchings#show"
 # - "backend/activity_watchings#update"
+# - "backend/animal_groups#create"
+# - "backend/animal_groups#destroy"
+# - "backend/animal_groups#edit"
+# - "backend/animal_groups#index"
+# - "backend/animal_groups#list"
+# - "backend/animal_groups#new"
+# - "backend/animal_groups#show"
+# - "backend/animal_groups#update"
 # - "backend/animals#create"
 # - "backend/animals#destroy"
 # - "backend/animals#edit"
@@ -79,6 +87,14 @@
 # - "backend/interfacers#toggle_view_mode"
 # - "backend/interfacers#unroll"
 # - "backend/interfacers#unroll_options"
+# - "backend/land_parcel_groups#create"
+# - "backend/land_parcel_groups#destroy"
+# - "backend/land_parcel_groups#edit"
+# - "backend/land_parcel_groups#index"
+# - "backend/land_parcel_groups#list"
+# - "backend/land_parcel_groups#new"
+# - "backend/land_parcel_groups#show"
+# - "backend/land_parcel_groups#update"
 # - "backend/logs#create"
 # - "backend/logs#destroy"
 # - "backend/logs#edit"
