--- a/config/rights.yml
+++ b/config/rights.yml
@@ -139,6 +139,14 @@
 # - "backend/places#new"
 # - "backend/places#show"
 # - "backend/places#update"
+# - "backend/plants#create"
+# - "backend/plants#destroy"
+# - "backend/plants#edit"
+# - "backend/plants#index"
+# - "backend/plants#list"
+# - "backend/plants#new"
+# - "backend/plants#show"
+# - "backend/plants#update"
 # - "backend/preferences#create"
 # - "backend/preferences#destroy"
 # - "backend/preferences#edit"
@@ -312,14 +320,6 @@
 # - "backend/professions#list"
 # - "backend/professions#new"
 # - "backend/professions#update"
-# - "backend/vegetals#create"
-# - "backend/vegetals#destroy"
-# - "backend/vegetals#edit"
-# - "backend/vegetals#index"
-# - "backend/vegetals#list"
-# - "backend/vegetals#new"
-# - "backend/vegetals#show"
-# - "backend/vegetals#update"
 # - "backend/working_sets#create"
 # - "backend/working_sets#destroy"
 # - "backend/working_sets#edit"
