clean and add a test redirection for activity

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -29,6 +29,8 @@
 # - "backend/animal_groups#edit"
 # - "backend/animal_groups#index"
 # - "backend/animal_groups#list"
+# - "backend/animal_groups#list_animals"
+# - "backend/animal_groups#list_place"
 # - "backend/animal_groups#new"
 # - "backend/animal_groups#show"
 # - "backend/animal_groups#update"
@@ -81,7 +83,6 @@
 # - "backend/interfacers#product_units"
 # - "backend/interfacers#search_for"
 # - "backend/interfacers#select_options"
-# - "backend/interfacers#toggle_module"
 # - "backend/interfacers#toggle_side"
 # - "backend/interfacers#toggle_tab"
 # - "backend/interfacers#toggle_view_mode"
@@ -320,6 +321,7 @@
 # - "backend/professions#list"
 # - "backend/professions#new"
 # - "backend/professions#update"
+# - "backend/snippets#toggle"
 # - "backend/working_sets#create"
 # - "backend/working_sets#destroy"
 # - "backend/working_sets#edit"
