Adds a (poor) search engine to Ekylibre

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -66,6 +66,7 @@
 # - "backend/dashboards#list_my_future_events"
 # - "backend/dashboards#list_recent_events"
 # - "backend/dashboards#production_equipments"
+# - "backend/dashboards#search"
 # - "backend/dashboards#settings_accountancy"
 # - "backend/dashboards#settings_base"
 # - "backend/dashboards#settings_production"
@@ -74,14 +75,15 @@
 # - "backend/dashboards#settings_relationship"
 # - "backend/dashboards#settings_sales"
 # - "backend/dashboards#settings_stocks"
+# - "backend/entity_addresses#show"
 # - "backend/entity_addresses#unroll"
+# - "backend/entity_links#show"
 # - "backend/entity_natures#unroll"
 # - "backend/interfacers#autocomplete"
 # - "backend/interfacers#product_trackings"
 # - "backend/interfacers#product_units"
 # - "backend/interfacers#search_for"
 # - "backend/interfacers#select_options"
-# - "backend/interfacers#toggle_module"
 # - "backend/interfacers#toggle_side"
 # - "backend/interfacers#toggle_tab"
 # - "backend/interfacers#toggle_view_mode"
@@ -320,6 +322,9 @@
 # - "backend/professions#list"
 # - "backend/professions#new"
 # - "backend/professions#update"
+# - "backend/purchase_items#show"
+# - "backend/sale_items#show"
+# - "backend/snippets#toggle"
 # - "backend/working_sets#create"
 # - "backend/working_sets#destroy"
 # - "backend/working_sets#edit"
