--- a/config/rights.yml
+++ b/config/rights.yml
@@ -91,6 +91,7 @@
 # - "backend/interfacers#toggle_view_mode"
 # - "backend/interfacers#unroll"
 # - "backend/interfacers#unroll_options"
+# - "backend/journal_entry_items#show"
 # - "backend/land_parcel_groups#create"
 # - "backend/land_parcel_groups#destroy"
 # - "backend/land_parcel_groups#edit"
