--- a/config/rights.yml
+++ b/config/rights.yml
@@ -56,16 +56,21 @@
 # - "backend/campaigns#new"
 # - "backend/campaigns#show"
 # - "backend/campaigns#update"
+# - "backend/cells/bank_chart_cells#show"
 # - "backend/cells/demo_bar_cells#show"
+# - "backend/cells/demo_map_cells#show"
 # - "backend/cells/demo_pie_cells#show"
-# - "backend/cells/elevage_rss_cells#show"
+# - "backend/cells/expense_chart_cells#show"
 # - "backend/cells/last_events_cells#list"
 # - "backend/cells/last_events_cells#show"
+# - "backend/cells/last_milk_result_cells#list"
+# - "backend/cells/last_milk_result_cells#show"
 # - "backend/cells/last_products_cells#list"
 # - "backend/cells/last_products_cells#show"
 # - "backend/cells/placeholder_cells#show"
 # - "backend/cells/product_bar_cells#show"
 # - "backend/cells/product_pie_cells#show"
+# - "backend/cells/rss_cells#show"
 # - "backend/dashboards#list_my_future_events"
 # - "backend/dashboards#list_recent_events"
 # - "backend/dashboards#production_equipments"
